# OBGC-V19

./: .env.example  .gitignore  Anchor.toml  README.md  index.html  package-lock.json  package.json  security.txt  vite.config.ts
docs/: RPC_ENDPOINT_GUIDE.md
programs/clicker/: Cargo.toml
programs/clicker/src/: lib.rs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src/components/: AboutUs.tsx  BondingCurveChart.tsx  CaptchaModal.tsx  ConnectionStatus.tsx  ElegantPopup.tsx  Leaderboard.tsx  NotificationSystem.tsx  TokenRequirementDisplay.tsx  TransactionScanner.tsx  WalletButton.tsx  WalletPermissionModal.tsx  WalletProvider.tsx
src/config/: constants.ts  helius.ts
src/hooks/: useBlockchainClicker.ts  useHybridClicker.ts  useSupabaseClicker.ts
src/lib/: supabase.ts
src/types/: anchor.ts
src/utils/: bondingCurve.ts  sounds.ts  tokenBalance.ts
supabase/migrations/: 20250628190224_late_swamp.sql  20250628191006_winter_dew.sql
