[package]
name = "clicker"
version = "0.1.0"
description = "1B Global Clicks Solana Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "clicker"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"